--- a/src/i18n/locales/pt/translation.json
+++ b/src/i18n/locales/pt/translation.json
@@ -64,9 +64,9 @@
         "title": "Acesso ao Microfone",
         "description": "Necessário para ouvir sua voz para transcrição."
       },
-      "accessibility": {
-        "title": "Acesso à Acessibilidade",
-        "description": "Necessário para digitar o texto transcrito em seus aplicativos."
+      "screenRecording": {
+        "title": "Acesso à Gravação de Tela",
+        "description": "Necessário para capturar o áudio do alto-falante em reuniões."
       },
       "grant": "Conceder Permissão",
       "granted": "Concedido",
@@ -436,12 +436,6 @@
     "yes": "Sim",
     "no": "Não",
     "noOptionsFound": "Nenhuma opção encontrada"
-  },
-  "accessibility": {
-    "permissionsRequired": "Permissões de Acessibilidade Necessárias",
-    "permissionsDescription": "O Talky precisa de permissões de acessibilidade para digitar o texto transcrito.",
-    "openSettings": "Abrir Configurações do Sistema",
-    "dismiss": "Dispensar"
   },
   "errors": {
     "loadDirectory": "Erro ao carregar diretório: {{error}}"
