--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -64,9 +64,9 @@
         "title": "Доступ к микрофону",
         "description": "Необходим для прослушивания вашего голоса для транскрипции."
       },
-      "accessibility": {
-        "title": "Доступ к универсальному доступу",
-        "description": "Необходим для ввода расшифрованного текста в ваши приложения."
+      "screenRecording": {
+        "title": "Доступ к записи экрана",
+        "description": "Необходим для захвата звука динамиков на встречах."
       },
       "grant": "Предоставить разрешение",
       "granted": "Предоставлено",
@@ -432,12 +432,6 @@
     "yes": "Да",
     "no": "Нет",
     "noOptionsFound": "Вариантов не найдено"
-  },
-  "accessibility": {
-    "permissionsRequired": "Требуются разрешения на доступ",
-    "permissionsDescription": "Talky необходимы разрешения на доступ для ввода расшифрованного текста.",
-    "openSettings": "Открыть настройки системы",
-    "dismiss": "Увольнять"
   },
   "errors": {
     "loadDirectory": "Ошибка загрузки каталога: {{error}}."
