--- a/src/i18n/locales/uk/translation.json
+++ b/src/i18n/locales/uk/translation.json
@@ -64,9 +64,9 @@
         "title": "Доступ до мікрофона",
         "description": "Потрібен для прослуховування вашого голосу для транскрипції."
       },
-      "accessibility": {
-        "title": "Доступ до доступності",
-        "description": "Потрібен для введення транскрибованого тексту у ваші додатки."
+      "screenRecording": {
+        "title": "Доступ до запису екрана",
+        "description": "Потрібен для захоплення звуку динаміків на зустрічах."
       },
       "grant": "Надати дозвіл",
       "granted": "Надано",
@@ -432,12 +432,6 @@
     "yes": "Так",
     "no": "Ні",
     "noOptionsFound": "Опцій не знайдено"
-  },
-  "accessibility": {
-    "permissionsRequired": "Потрібні права доступу",
-    "permissionsDescription": "Talky потребує дозволи доступності для введення транскрибованого тексту.",
-    "openSettings": "Відкрити Системні налаштування",
-    "dismiss": "Закрити"
   },
   "errors": {
     "loadDirectory": "Помилка завантаження папки: {{error}}"
